<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="nav_view">

    <item android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/about_menu"
                android:title="@string/about" />
            <item
                android:id="@+id/favourites_menu"
                android:title="@string/favourites_tab" />
        </menu>
    </item>
    <item android:title="@string/theme">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/day_theme_menu"
                android:title="@string/bright_theme"
                android:checkable="true" />
            <item
                android:id="@+id/night_theme_menu"
                android:title="@string/dark_theme"
                android:checkable="true" />
            </group>
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/rate_menu"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/feedback_menu"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/share_menu"
                android:title="@string/share_lyrics_nigeria_with_friends" />
        </menu>
    </item>
</menu>