<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_lyrics"
        android:icon="@drawable/ic_queue_music_black_24dp"
        android:title="@string/lyrics" />

    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:title="@string/videos" />

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_rss_feed_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/forum_message"
        android:title="@string/chat"/>

</menu>
